...

    <TextView
        android:id="@+id/textoPotencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Marque las casillas que más se adapten a su búsqueda:"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox android:id="@+id/checkbox2kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="2kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox7.4kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:text="7.4kW"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox22kW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
...
    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:text="Aceptar" />

    <Button
        android:id="@+id/botonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-50dp"
        android:text="Cancelar" />





</LinearLayout>
